Action menu checkIn
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22851

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -51,14 +51,18 @@
         </div>
         <div class="grid-vr-custom" id="gridtest">
             <div class="grid-header" ng-sortable="itemsSortable" style="height: auto; white-space: nowrap; overflow: hidden;">
-                <div ng-repeat="c in columns" class="grid-cell handeldrag" ng-init="c.colwidth = getwidth() " ng-style="{'width':getwidth()+'px'}">
-                    {{columns[$index].displayname}}
+                <div style="display:inline-block;width:50px;"> first</div>
+                <div style="display:inline">
+                    <div ng-repeat="c in columns" class="grid-cell handeldrag" ng-init="c.colwidth = getwidth() " ng-style="{'width':getwidth()+'%'}">
+                        {{columns[$index].displayname}}
+                    </div>
                 </div>
+                <div style="display:inline-block;width:50px;"> last</div>
             </div>
             <div class="grid-body-container">
                 <div id="grid-canvas">
                     <div class="grid-body" ng-repeat="d in tabdata">
-                        <div ng-repeat="c in columns" class="grid-cell" ng-style="{'width':c.colwidth+'px'}">
+                        <div ng-repeat="c in columns" class="grid-cell" ng-style="{'width':c.colwidth+'%'}">
                             <span ng-if="$index==0">
                                 <a ng-click="d.open=!d.open" href="">
                                     <span class="caret-rigth" ng-if="!d.open"></span>
@@ -70,7 +74,6 @@
                         <div ng-if="d.open" class="grid-cell" ng-style="{'width':('100%'}">
                             {{d}}
                         </div>
-
                     </div>
                 </div>
 
