--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/EditorTemplates/CodeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/EditorTemplates/CodeTemplate.html
@@ -1,51 +1,59 @@
 ﻿<div ng-controller="CodeController">
-    <vr-columns colnum="2">
-        <vr-label standalone>Code</vr-label>
-    </vr-columns>
-    <vr-columns colnum="2">
-        <div>
-            <number-filed input-value="code" />
-        </div>
-        <div style="padding-top:5px">
-            <switch ng-model="subCodes" class="green"></switch>
-            <vr-label standalone>With Sub Codes</vr-label>
-        </div>
 
+    <vr-columns colnum="4" >
+        <vr-row removeline>
+            <vr-columns colnum="6" colnumsm="4">
+                <vr-label standalone>Code</vr-label>
+            </vr-columns>
+            <vr-columns colnum="6" colnumsm="4">
+                <div>
+                    <number-filed input-value="code" />
+                </div>
+                <div style="padding-top:5px">
+                    <switch ng-model="subCodes" class="green"></switch>
+                    <vr-label standalone>With Sub Codes</vr-label>
+                </div>
+            </vr-columns>
+        </vr-row>
     </vr-columns>
-    <vr-columns colnum="2">
-        <vr-label standalone>Excluded Codes</vr-label>
-    </vr-columns>
-    <vr-columns colnum="2">
-        <div class="dropdown" id="CodeListddl">
-            <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenucodes" data-toggle="dropdown" aria-expanded="true">
-                <span style="float:left;margin:0px"> {{getCodes()}}</span>
-                <span style="position:absolute;top:15px;right:5px" class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenucodes" class="single-col-checklist">
-                <li role="presentation" ng-click="muteAction($event)">
-                    <div style="display: inline-block; width: 220px;">
-                        <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; margin: 5px; ">
-                            <div class="inner-addon right-addon form-inline">
-                                <input type="text" class="form-control input-sm inline-inpute" ng-model="codeInpute" ng-keyup="addCodeEnter($event)" />
-                                <button class="btn btn-default" style="display:inline-block" ng-click="addCode($event)">Add</button>
+    <vr-columns colnum="4">
+        <vr-row removeline>
+            <vr-columns colnum="6" colnumsm="4">
+                <vr-label standalone>Excluded Codes</vr-label>
+            </vr-columns>
+            <vr-columns colnum="6" colnumsm="4">
+                <div class="dropdown" id="CodeListddl">
+                    <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenucodes" data-toggle="dropdown" aria-expanded="true">
+                        <span style="float:left;margin:0px"> {{getCodes()}}</span>
+                        <span style="position:absolute;top:15px;right:5px" class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenucodes" class="single-col-checklist">
+                        <li role="presentation" ng-click="muteAction($event)">
+                            <div style="display: inline-block; width: 220px;">
+                                <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; margin: 5px; ">
+                                    <div class="inner-addon right-addon form-inline">
+                                        <input type="text" class="form-control input-sm inline-inpute" ng-model="codeInpute" ng-keyup="addCodeEnter($event)" />
+                                        <button class="btn btn-default" style="display:inline-block" ng-click="addCode($event)">Add</button>
+                                    </div>
+                                </div>
+                                <div style="padding:5px ;">
+                                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="muteAction($event);codeList.length = 0">
+                                        Clear all
+                                        <i class="glyphicon glyphicon-trash hand-cursor "></i>
+                                    </a>
+                                </div>
+                                <div style="height: 225px; overflow: auto;padding-top:15px">
+                                    <span class="label custom-label" ng-repeat="obj in codeList">
+                                        {{obj}}
+                                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="removeCode($event,obj)"></span>
+                                    </span>
+                                </div>
+
                             </div>
-                        </div>
-                        <div style="padding:5px ;">
-                            <a href="" class="link" style="position: absolute; right: 5px;" ng-click="muteAction($event);codeList.length = 0">
-                                Clear all
-                                <i class="glyphicon glyphicon-trash hand-cursor "></i>
-                            </a>
-                        </div>
-                        <div style="height: 225px; overflow: auto;padding-top:15px">
-                            <span class="label custom-label" ng-repeat="obj in codeList">
-                                {{obj}}
-                                <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="removeCode($event,obj)"></span>
-                            </span>
-                        </div>
-
-                    </div>
-                </li>
-            </ul>
-        </div>
+                        </li>
+                    </ul>
+                </div>
+            </vr-columns>
+        </vr-row>
     </vr-columns>
 </div>
