--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteRuleEditor.html
@@ -16,12 +16,12 @@
                                 <vr-label standalone>Rule Type:</vr-label>
                             </vr-columns>
                             <vr-columns colnum="2">
-                                <vr-select datatextfield="name" datavaluefield="objectType" isrequired 
+                                <vr-select datatextfield="name" datavaluefield="objectType" isrequired
                                            onselectionchanged="onchangeRouteRule" datasource="optionsRouteType.datasource" selectedvalues="optionsRouteType.selectedvalue"></vr-select>
 
                             </vr-columns>
 
-                        </vr-row>                        
+                        </vr-row>
                         <vr-row>
                             <vr-select type="menu" datatextfield="name" datavaluefield="name"
                                        onselectionchanged="update2" datasource="optionsRuleType.datasource" selectedvalues="optionsRuleType.selectedvalue"></vr-select>
@@ -36,25 +36,33 @@
                             </div>
                         </vr-row>
                         <vr-row>
-                            <vr-columns colnum="2">
-                                <vr-label standalone>Begin Effective Date:</vr-label>
+                            <vr-columns colnum="4">
+                                <vr-row removeline>
+                                    <vr-columns colnum="6" colnumsm="4">
+                                        <vr-label standalone>Begin Effective Date:</vr-label>
+                                    </vr-columns>
+                                    <vr-columns colnum="6" colnumsm="4">
+                                        <vr-datetimepicker type="date" value="BEDDate" isrequired></vr-datetimepicker>
+                                    </vr-columns>
+                                </vr-row>
                             </vr-columns>
-                            <vr-columns colnum="2" >
-                                <vr-datetimepicker type="date" value="BEDDate" isrequired></vr-datetimepicker>                                
-                            </vr-columns>
-                            <vr-columns colnum="2">
-                                <vr-label standalone>End Effective Date:</vr-label>
-                            </vr-columns>
-                            <vr-columns colnum="2">
-                                <vr-datetimepicker type="date" value="EEDDate" ></vr-datetimepicker>                                   
+                            <vr-columns colnum="4">
+                                <vr-row removeline>
+                                    <vr-columns colnum="6" colnumsm="4">
+                                        <vr-label standalone>End Effective Date:</vr-label>
+                                    </vr-columns>
+                                    <vr-columns colnum="6" colnumsm="4">
+                                        <vr-datetimepicker type="date" value="EEDDate"></vr-datetimepicker>
+                                    </vr-columns>
+                                </vr-row>
                             </vr-columns>
                         </vr-row>
-                      
+
                         <vr-row ng-show="optionsRouteType.selectedvalue  && optionsRouteType.selectedvalue.name != 'Block Route' && optionsRouteType.selectedvalue.url!='' ">
-                            <div class="col-lg-12  style-col">
+                            <div class="col-lg-12 ">
                                 <h4>{{optionsRouteType.selectedvalue.name}} Details:</h4>
                             </div>
-                            <div style="min-height:70px" ng-include src="optionsRouteType.selectedvalue.url">
+                            <div  style="min-height:70px" ng-include src="optionsRouteType.selectedvalue.url">
 
                             </div>
                         </vr-row>
@@ -71,10 +79,10 @@
                 <vr-columns colnum="12" simplecol>
                     <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
                         <div transclude-to="buttons">
-                            <vr-button type="Save" formname="formRouteRuleEditor" data-onclick="saveRule" isasynchronous=" true" ></vr-button>
+                            <vr-button type="Save" formname="formRouteRuleEditor" data-onclick="saveRule" isasynchronous=" true"></vr-button>
                             <vr-button type="Close" data-onclick="hide"></vr-button>
-                         </div>
-                    </vr-actionbar>                    
+                        </div>
+                    </vr-actionbar>
                 </vr-columns>
             </vr-row>
         </div>
