--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
@@ -4,6 +4,10 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
+                    <vr-select label="Group By:" datasource="groupKeys"
+                               datatextfield="title" datavaluefield="groupKeyEnumValue" selectedvalues="selectedGroupKeys" ismultipleselection isrequired></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2">
                     <vr-select label="Switches:" datasource="switches"
                                datatextfield="Name" datavaluefield="SwitchId" selectedvalues="selectedSwitches" ismultipleselection></vr-select>
                 </vr-columns>
@@ -33,7 +37,7 @@
 
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-                
+
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
@@ -43,33 +47,36 @@
     </vr-form>
     <div ng-show="showResult" vr-loader="isGettingData">
         <vr-row>
-            <vr-columns colnum="7" simplecol>
+            <vr-columns colnum="6" simplecol>
                 <vr-section title="Overall">
-                        <vr-row removeline>
-                            <vr-columns colnum="4">
-                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true">
-                                    <vr-datagridcolumn field="'measureDescription'" isclickable="isOverallItemClickable" onclicked="onOverallItemClicked"></vr-datagridcolumn>
-                                    <vr-datagridcolumn field="'value'" type="'Number'"></vr-datagridcolumn>
-                                </vr-datagrid>
-                            </vr-columns>
-                            <vr-columns colnum="7">
-                                <vr-chart data-on-ready="chartSelectedMeasureReady"></vr-chart>
-                            </vr-columns>
-                        </vr-row>
+                    <vr-chart data-on-ready="chartSelectedMeasureReady" menuactions="getChartMenuActions"></vr-chart>
                 </vr-section>
             </vr-columns>
-            <vr-columns colnum="5" simplecol>
-                <vr-section title="Zone Measures" vr-loader="isGettingEntityStatistics">
-                        <vr-chart data-on-ready="chartSelectedEntityReady"></vr-chart>
+            <vr-columns colnum="6" simplecol>
+                <vr-section title="{{selectedEntityType}} Measures" vr-loader="isGettingEntityStatistics">
+                    <vr-chart data-on-ready="chartSelectedEntityReady"></vr-chart>
                 </vr-section>
             </vr-columns>
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
+                <div style="align-content:center">
+                    <vr-datagrid datasource="overallData">
+                        <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'"></vr-datagridcolumn>
+                    </vr-datagrid>
+                </div>
+
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns colnum="12" simplecol>
                 <vr-datagrid data-on-ready="onMainGridReady" datasource="data"
-                             pagersettings="mainGridPagerSettings">
-                    <vr-datagridcolumn headertext="'Zone'" field="'zoneName'" enablehiding="'false'" isclickable="'true'" onclicked="onZoneClicked"></vr-datagridcolumn>
+                             pagersettings="mainGridPagerSettings" menuactions="gridMenuActions">
+                    <vr-datagridcolumn ng-repeat="groupKey in currentSearchCriteria.groupKeys" headertext="groupKey.gridHeader" field="'GroupKeyValues[' + $index + '].Name'" columnindex="$index" widthfactor="15" enablehiding="'false'" isclickable="'true'" tag="groupKey" onclicked="onGroupKeyClicked"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
+                    <vr-datagridexpandablerow>
+                        <div ng-include="'/Client/Modules/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html'"></div>
+                    </vr-datagridexpandablerow>
                 </vr-datagrid>
             </vr-columns>
             <!--<vr-label style="float:right;margin-right:25px">
