grid Expandable Row Content
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22914

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -737,11 +737,15 @@ input.ui-grid-filter-input[type="text"] {
 }
 
 .menulink:hover{
-    color:#000;
+    color: #666;
     text-decoration:none;
 }
 .menulink:active{
-    color:#000;
+    color:#000 ;
+    text-decoration:none;
+}
+..menulink:visited{
+    color:#000 ;
     text-decoration:none;
 }
 .innerlist a:before { 
