Added Grid Paging
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22940

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
@@ -9,7 +9,7 @@
     
 </vr-datagridcell>
 
-<vr-datagrid datasource="gridData">
+<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData">
     <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Column 4'">
