--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -178,6 +178,8 @@
 @Scripts.Render("~/bundles/helpers")
 @Scripts.Render("~/bundles/JQuery")
 @Scripts.Render("~/bundles/Angular")
+@Scripts.Render("~/bundles/AngularExtensions")
+
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/highchart")
 @*@Scripts.Render("~/bundles/Semantic")*@
