--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
@@ -8,8 +8,8 @@
 <vr-datagridcell htmltemplate='html'>
     
 </vr-datagridcell>
-
-<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData">
+<input type="button" ng-click="addItem()" value="Add Item" />
+<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData" on-ready="gridReady">
     <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Column 4'">
